WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
42210
[chromium] Autofill menu shows seperator at the wrong place when an entry is deleted
https://bugs.webkit.org/show_bug.cgi?id=42210
Summary
[chromium] Autofill menu shows seperator at the wrong place when an entry is ...
Scott Violet
Reported
2010-07-13 16:32:41 PDT
- Trigger the autofill popup in a form text input where you have autofill and autocomplete values. - In the popup, select the autocomplete value and press the delete key Expected: The selected entry is deleted and the menu shows the remaining entries, the separator and "Autofill options" Actual: The selected entry is deleted but "Autofill options" menu shows before the separator and if selected fills the text input with the actula "Autofill options" string
Attachments
Initial fix
(1.50 KB, patch)
2010-07-13 16:36 PDT
,
Scott Violet
levin
: review-
levin
: commit-queue-
Details
Formatted Diff
Diff
Addresses review feedback
(3.80 KB, patch)
2010-07-14 11:04 PDT
,
Scott Violet
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Scott Violet
Comment 1
2010-07-13 16:36:08 PDT
Created
attachment 61430
[details]
Initial fix
James Hawkins
Comment 2
2010-07-13 16:43:17 PDT
LGTM
David Levin
Comment 3
2010-07-13 23:02:48 PDT
Comment on
attachment 61430
[details]
Initial fix
> Index: ChangeLog > + * ../../WebKit/chromium/src/AutoFillPopupMenuClient.cpp:
> A few probloems: 1. The is either the wrong ChangeLog or else this patch is malformed. It should be the ChangeLog at WebKit/chromium/ChangeLog. 2. The path in the ChangeLog is messed up. 3. The function being modified is missing in the ChangeLog. My bad if I missed any of these things before. Lastly,it is nice to give a *small* comment by the function in the ChangeLog to explain what was done. (It looks like the change involves account for the separator index.)
Scott Violet
Comment 4
2010-07-14 11:04:46 PDT
Created
attachment 61539
[details]
Addresses review feedback Adds call to popupmenuclient to make sure the removal is allowed. Without this the WebViewClient was notified even if the remove wasn't allowed.
James Hawkins
Comment 5
2010-07-14 11:36:46 PDT
Patch set 2 LGTM, much better.
David Holloway
Comment 6
2010-07-14 12:41:37 PDT
LGTM.
WebKit Commit Bot
Comment 7
2010-07-14 20:00:55 PDT
Comment on
attachment 61539
[details]
Addresses review feedback Clearing flags on attachment: 61539 Committed
r63395
: <
http://trac.webkit.org/changeset/63395
>
WebKit Commit Bot
Comment 8
2010-07-14 20:01:00 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug