2010-07-14  Scott Violet  <sky@chromium.org>

Reviewed by David Levin.

        [chromium] Autofill menu shows seperator at the wrong place when an entry is deleted
        https://bugs.webkit.org/show_bug.cgi?id=42210

        * src/AutoFillPopupMenuClient.cpp:
        (WebKit::AutoFillPopupMenuClient::removeSuggestionAtIndex): Updates internal data appropriately.
        (WebKit::AutoFillPopupMenuClient::canRemoveSuggestionAtIndex): Now called before removal to see if can remove.
        * src/AutoFillPopupMenuClient.h: Fixed whitespace and added method.
        * src/WebViewImpl.cpp:
        (WebKit::WebViewImpl::autocompleteHandleKeyEvent): Added call to canRemoveSuggestionAtIndex.

Canonical link: https://commits.webkit.org/54244@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@63395 268f45cc-cd09-0410-ab3c-d52691b4dbfc